# jhelper-template

./: .gitignore  CMakeLists.txt  run.template  submission.template  task.template
